name:                   sexpr-parser
version:                0.1.0.0
homepage:               https://github.com/rcook/sexpr-parser#readme
license:                MIT
license-file:           LICENSE
author:                 Richard Cook
maintainer:             rcook@rcook.org
copyright:              2019 Richard Cook
category:               Command Line
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:     README.md

executable sexpr-parser-demo
  default-language:     Haskell2010
  hs-source-dirs:       src
  main-is:              Main.hs
  build-depends:
      base >= 4.7 && < 5
    , megaparsec
    , sexpr-parser

library
  default-language:       Haskell2010
  hs-source-dirs:         lib
  exposed-modules:
      Text.SExpression
    , Text.SExpression.Internal
    , Text.SExpression.Types
  build-depends:
      base >= 4.7 && < 5
    , megaparsec
    , parsec

test-suite sexpr-parser-spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       spec
  main-is:              Spec.hs
  other-modules:
      Text.SExpression.InternalSpec
  build-depends:
      base >= 4.7 && < 5
    , hspec
    , megaparsec
    , sexpr-parser
